--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="assets/boostrap/js/bootstrap.min.js"></script>
+    <div id="holder">
     <table border="0" class="header">
       <tr>
         <td>
@@ -42,6 +43,7 @@
             <p class = "menubutton"><a class="button" href="pov.html">Projects</a></p>
           </td>
           <td id="mainbody">
+          <div id="textbox">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis arcu sit amet sagittis ultricies. Aliquam et vulputate urna, nec rhoncus sapien. Proin auctor turpis eu ullamcorper bibendum. Phasellus vitae maximus lectus. Fusce mi nisl, laoreet quis neque non, blandit suscipit ligula. Nam purus ligula, vestibulum nec massa et, hendrerit scelerisque lacus. Vivamus ultricies porttitor ultricies. Donec vulputate felis sit amet eleifend condimentum. Sed a erat ex. Morbi ut massa euismod, maximus nulla non, feugiat felis. Maecenas eget placerat ipsum. Mauris id venenatis nunc. Duis aliquam, diam et placerat maximus, augue diam eleifend risus, eget rutrum massa tortor eu libero. Nunc viverra risus eget nisi condimentum venenatis. Nulla ligula mauris, luctus eget sem ac, hendrerit congue augue.
             </p>
@@ -51,14 +53,18 @@
             <p>
             Proin a tortor et odio ultricies varius. Cras ultrices nulla eget dui varius tincidunt. Phasellus aliquam non arcu ac bibendum. Nam sed enim facilisis, venenatis neque sed, sodales elit. Nulla molestie imperdiet mauris eget dignissim. Integer bibendum nulla sit amet lacus semper gravida. Curabitur mollis vel lectus a ultricies. Nulla mollis est a risus consequat, sit amet vulputate sapien posuere. Aliquam leo ipsum, fermentum a lobortis vitae, faucibus at lorem. Vivamus vel congue lorem. Nam convallis efficitur nisi, id dapibus augue porttitor sit amet. Aliquam vitae efficitur magna. Praesent ac rhoncus leo. In vel consectetur magna, id egestas eros. In eu massa et massa interdum vehicula sed non erat. Nullam sed fermentum augue.
             </p>
+            </div>
           </td>
         </tr>
       </table>
     </div>
-      <table class="footertable">
+    <div class="footer">
+      <table>
         <tr>
           <td style="padding: 3px;">Copyright Alexa J Williams 2017 || <a class="footerbutton" href="mailto:williaajj@gmail.com">Contact</a></td>
         </tr>
       </table>
+    </div>
+    </div>
   </body>
 </html>
