--- a/resume.html
+++ b/resume.html
@@ -44,13 +44,10 @@
           <td id="mainbody">
           <div id="textbox">
             <h1>
-              Home
+              Resume
             </h1>
             <p>
               <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
-            </p>
-            <p>
-              I'm a reference librarian at a liberal arts college in Boston, MA who is extremely interested in new and emerging technologies.
             </p>
             <p>
 
