--- a/index.html
+++ b/index.html
@@ -46,14 +46,18 @@
             <h1>
               Home
             </h1>
+            <img id="profile" src="assets/images/profile.jpg" alt="image" align="right" style="width:284px;height:400px;">
             <p>
               <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
             </p>
             <p>
-              I'm a reference librarian at a liberal arts college in Boston, MA who is extremely interested in new and emerging technologies.
+              I am a librarian with a BA '14 in English from Wellesley College and a MLIS '18 from Simmons College currently employed at Emmanuel College's <a href="libary.emmanuel.edu">Cardinal Cushing Library</a> in Reference Services.
             </p>
             <p>
-
+              After leaving Wellesley I moved back home to work at an old summer job, frequently visiting the public library down the road from me. After a time visiting became volunteering, and volunteering became working part time. I was so in love with the library I began researching opportunities to further my education and advance in the field. The rest is history.
+            </p>
+            <p>
+              My hobbies include reading almost anything, the extent of which I chronicle on my <a href="https://www.goodreads.com/user/show/43823143-alexa-williams">Goodreads</a>. I also enjoy "platinuming" games on my PS4. A list of games I've earned platinum trophies for can be found <a href="https://psnprofiles.com/LyrasOxford?completion=platinum">here.</a> I also love coffee--roasting, grinding, brewing, drinking--and often check out different cafes on weekends.
             </p>
             </div>
           </td>
