--- a/index.html
+++ b/index.html
@@ -2,75 +2,124 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Other Alexa: Webspace of Alexa J Williams</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <style>
-      @font-face {
-        font-family: Raleway;
-        src: url('assets/fonts/raleway/Raleway-Medium.ttf');
-      }
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/images/favicon.ico">
 
-      @font-face {
-        font-family: Roboto;
-        src: url('assets/fonts/roboto/Roboto-Medium.ttf');
-      }
-    </style
+    <title>The Other Alexa</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/jumbotron.css" rel="stylesheet">
   </head>
+
   <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="assets/boostrap/js/bootstrap.min.js"></script>
-    <div id="holder">
-    <table border="0" class="header">
-      <tr>
-        <td>
-          <a href="index.html"><img src="assets/images/other_alexa_logo.png" alt="The Other Alexa" style="width:500px;height:200px;"></a>
-        </td>
-      </tr>
-    </table>
-    <div id="main">
-      <table class="menutable" >
-        <tr>
-          <td id="menu">
-            <p class = "menubutton"><a class="button" href="index.html">Home</a></p>
-            <p class = "menubutton"><a class="button" href="contact.html">Contact</a></p>
-            <p class = "menubutton"><a class="button" href="resume.html">Resume</a></p>
-            <p class = "menubutton"><a class="button" href="social.html">Social Media</a></p>
-            <p class = "menubutton"><a class="button" href="projects.html">Projects</a></p>
-          </td>
-          <td id="mainbody">
-          <div id="textbox">
-            <h1>
-              Home
-            </h1>
-            <img id="profile" src="assets/images/profile.jpg" alt="image" align="right" style="width:284px;height:400px;">
-            <p>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/images/logo.png" alt="logo" style="height:50px;width:50px;">
+        The Other Alexa</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="connect.html">Connect</a>
+          </li>
+          <!---
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          --->
+          <!---
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          --->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">Welcome</h1>
+        <p><p>
               <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
             </p>
             <p>
-              I am a librarian with a BA '14 in English from Wellesley College and a MLIS '18 from Simmons College currently employed at Emmanuel College's <a href="libary.emmanuel.edu">Cardinal Cushing Library</a> in Reference Services.
+              I am a librarian with a BA '14 in English from Wellesley College and a MLIS '18 from Simmons College currently employed at Emmanuel College's Cardinal Cushing Library in Reference Services.
             </p>
-            <p>
-              After leaving Wellesley I moved back home to work at an old summer job, frequently visiting the public library down the road from me. After a time visiting became volunteering, and volunteering became working part time. I was so in love with the library I began researching opportunities to further my education and advance in the field. The rest is history.
-            </p>
-            <p>
-              My hobbies include reading almost anything, the extent of which I chronicle on my <a href="https://www.goodreads.com/user/show/43823143-alexa-williams">Goodreads</a>. I also enjoy "platinuming" games on my PS4. A list of games I've earned platinum trophies for can be found <a href="https://psnprofiles.com/LyrasOxford?completion=platinum">here.</a> I also love coffee--roasting, grinding, brewing, drinking--and often check out different cafes on weekends.
-            </p>
-            </div>
-          </td>
-        </tr>
-      </table>
+          </p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      </div>
     </div>
-    <div class="footer">
-      <table>
-        <tr>
-          <td style="padding: 3px;">Copyright Alexa J Williams 2017 || <a class="footerbutton" href="mailto:williaajj@gmail.com">Contact</a></td>
-        </tr>
-      </table>
-    </div>
-    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Resume</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Projects</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Connect</h2>
+          <p>Connect with me through social media or email.</p>
+          <p>
+            <img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;">
+            <img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15">
+            <img src="assets/images/Linkedin.png" alt="logo" style="height:60px;width:60px;">
+          </p>
+          </br>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Alexa J. Williams 2017 | Made with Bootstrap</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="bootstrap/assets/js/vendor/popper.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
