--- a/projects.html
+++ b/projects.html
@@ -1,69 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Other Alexa: Webspace of Alexa J Williams</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <style>
-      @font-face {
-        font-family: Raleway;
-        src: url('assets/fonts/raleway/Raleway-Medium.ttf');
-      }
-
-      @font-face {
-        font-family: Roboto;
-        src: url('assets/fonts/roboto/Roboto-Medium.ttf');
-      }
-    </style
-  </head>
-  <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="assets/boostrap/js/bootstrap.min.js"></script>
-    <div id="holder">
-    <table border="0" class="header">
-      <tr>
-        <td>
-          <a href="index.html"><img src="assets/images/other_alexa_logo.png" alt="The Other Alexa" style="width:500px;height:200px;"></a>
-        </td>
-      </tr>
-    </table>
-    <div id="main">
-      <table class="menutable" >
-        <tr>
-          <td id="menu">
-            <p class = "menubutton"><a class="button" href="index.html">Home</a></p>
-            <p class = "menubutton"><a class="button" href="contact.html">Contact</a></p>
-            <p class = "menubutton"><a class="button" href="resume.html">Resume</a></p>
-            <p class = "menubutton"><a class="button" href="social.html">Social Media</a></p>
-            <p class = "menubutton"><a class="button" href="projects.html">Projects</a></p>
-          </td>
-          <td id="mainbody">
-          <div id="textbox">
-            <h1>
-              Projects
-            </h1>
-            <p>
-              <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
-            </p>
-            <p>
-
-            </p>
-            </div>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="footer">
-      <table>
-        <tr>
-          <td style="padding: 3px;">Copyright Alexa J Williams 2017 || <a class="footerbutton" href="mailto:williaajj@gmail.com">Contact</a></td>
-        </tr>
-      </table>
-    </div>
-    </div>
-  </body>
+<html>
 </html>
