--- a/projects.html
+++ b/projects.html
@@ -1,2 +1,146 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/images/favicon.ico">
+
+    <title>The Other Alexa</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/jumbotron.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/images/logo.png" alt="logo" style="height:50px;width:50px;">
+        The Other Alexa</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="connect.html">Connect</a>
+          </li>
+          <!---
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          --->
+          <!---
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          --->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">Projects</h1>
+        <p><p>
+              <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
+            </p>
+            <p>
+              I have completed a number of projects as part of my studies at Simmons SLIS, a selection of which can be found below.
+            </p>
+            <p>
+              <h3>Information Visualization</h3>
+              <ul>
+              <li>Studied data gathering, analysis, and visualization.</li>
+              <li>Created a website with data visualizations using the d3.js javascript library.</li>
+              <li>A live version of this project can be found <a class="inline" href="http://web.simmons.edu/~williaaj/lis593d/finalproject/index.html">here</a>.</li>
+              </ul>
+              </br></br>
+              <h3>Usability and User Experience Research</h3>
+              <ul>
+              <li>Studied usability research techniques including scenario development, user profiling, tasks analysis, usability tests, log data analysis, and heuristic evaluation.</li>
+              <li>Performed user testing WGBH Stock Sales and Licensing website and drafted a summarizing data and recommended changes to the site.</li>
+              <li>You can download a .pdf of the final report <a href="assets/usabilityReport.pdf">here</a>.</li>
+              </ul>
+              </br></br>
+              <h3>Database Management</h3>
+              <ul>
+              <li>Studied data modeling, relational database design, PHP, and created SQL queries.</li>
+              <li>Created a database of A Song of Ice and Fire characters, places, events, and houses, as well as a web interface to access the information.</li>
+              <li>A live version of this database is currently unavailable, but the files are available upon request.</li>
+              </ul>
+            </p>
+          </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Resume</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Projects</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Connect</h2>
+          <p>Connect with me through social media or email.</p>
+          <p>
+            <a href="https://twitter.com/TheOtherAlexa"><img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;"></a>
+            <a href="https://github.com/lyrox"><img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15"></a>
+            <a href="https://www.linkedin.com/in/alexa-williams-b647a952/"><img src="assets/images/Linkedin.png" alt="logo" style="height:60px;width:60px;"></a>
+          </p>
+          </br>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Alexa J. Williams 2017 | Made with Bootstrap</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="bootstrap/assets/js/vendor/popper.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
