--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
               <ul>
               <li>Studied usability research techniques including scenario development, user profiling, tasks analysis, usability tests, log data analysis, and heuristic evaluation.</li>
               <li>Performed user testing WGBH Stock Sales and Licensing website and drafted a summarizing data and recommended changes to the site.</li>
-              <li>You can download a .pdf of the final report <a href="assets/usabilityReport.pdf">here</a>.</li>
+              <li>You can download a .pdf of the final report <a href="usabilityReport.pdf">here</a>.</li>
               </ul>
               </br></br>
               <h3>Database Management</h3>
