--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@
         <div class="col-md-4">
           <h2>Resume</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="resume.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Projects</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="projects.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Connect</h2>
           <p>Connect with me through social media or email.</p>
           <p>
-            <img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;">
-            <img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15">
-            <img src="assets/images/Linkedin.png" alt="logo" style="height:60px;width:60px;">
+            <a href="https://twitter.com/TheOtherAlexa"><img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;"></a>
+            <a href="https://github.com/lyrox"><img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15"></a>
+            <a href="https://www.linkedin.com/in/alexa-williams-b647a952/"><img src="assets/images/Linkedin.png" alt="logo" style="height:60px;width:60px;"></a>
           </p>
           </br>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="contact.html" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
