--- a/resume.html
+++ b/resume.html
@@ -1,2 +1,155 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/images/favicon.ico">
+
+    <title>The Other Alexa</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/jumbotron.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100351201-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-100351201-1');
+</script>
+
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/images/logo.png" alt="logo" style="height:50px;width:50px;">
+        The Other Alexa</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Connect</a>
+          </li>
+          <!---
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          --->
+          <!---
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          --->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">Resume</h1>
+        <p>
+            <h3>Library Experience</h3>
+            <p>
+              <strong>EMMANUEL COLLEGE | Boston, MA</strong></br>
+              2015-Present | Reference Librarian</br>
+              <ul>
+              <li>Help students find and cite resources for research papers and other projects.</li>
+              <li>Create and maintain Library Resource Guides using SubjectsPlus.</li>
+              <li>Assist in Instructional Librarian to create and run Information Literacy classes.</li>
+              </ul>
+              <strong>SIMMONS COLLEGE | Boston, MA</strong></br>
+              2015-Present | Lead Technology Reference Assistant</br>
+              <ul>
+              <li>Oversee day to day running of the SLIS Tech Lab.</li>
+              <li>Run technology workshops for Library and Information Science students.</li>
+              <li>Provide hardware and software assistance to students and faculty.</li>
+              </ul>
+              <strong>DENNIS PUBLIC LIBRARY | Dennisport, MA</strong></br>
+              2014-2015 | Circulation/Young Adult Collection Development</br>
+              <ul>
+              <li>Use Sierra to maintain patron records, check in and out books.</li>
+              <li>Select and order books for the Young Adult section through Baker & Taylor.</li>
+              <li>Help to train and supervise volunteers.</li>
+              </ul>
+            </p>
+            <h3>General Experience</h3>
+          </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Resume</h2>
+          <p>My resume includes a summary of my previous work experience, including my work in libraries and other field as well as my ever ongoing education. </p>
+          <p><a class="btn btn-secondary" href="resume.html" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Projects</h2>
+          <p>Check out my digital projects, including data visualizations and usability reports as well as some more fun projects like Dungeons & Dragons resources!</p>
+          <p><a class="btn btn-secondary" href="projects.html" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Connect</h2>
+          <p>Connect with me through social media or email. </p>
+          <p>
+            <a href="https://twitter.com/TheOtherAlexa"><img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;"></a>
+            <a href="https://github.com/lyrox"><img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15"></a>
+            <a href="https://www.linkedin.com/in/alexa-williams-b647a952/"><img src="assets/images/Linkedin.png" alt="logo" style="height:60px;width:60px;"></a>
+          </p>
+          </br>
+          <p><a class="btn btn-secondary" href="contact.html" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Alexa J. Williams 2017 | Made with Bootstrap</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="bootstrap/assets/js/vendor/popper.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
