--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,17 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/jumbotron.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100351201-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-100351201-1');
+</script>
+
   </head>
 
   <body>
@@ -29,16 +40,16 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="connect.html">Connect</a>
+            <a class="nav-link" href="contact.html">Connect</a>
           </li>
           <!---
           <li class="nav-item">
@@ -67,9 +78,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">Projects</h1>
-        <p><p>
-              <font color="red">Please note that this site is currently under contsruction. If you are looking for something and cannot find it, please email williaajj@gmail.com. </font>
-            </p>
+        <p>
             <p>
               I have completed a number of projects as part of my studies at Simmons SLIS, a selection of which can be found below.
             </p>
@@ -104,17 +113,17 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Resume</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>My resume includes a summary of my previous work experience, including my work in libraries and other field as well as my ever ongoing education. </p>
           <p><a class="btn btn-secondary" href="resume.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Projects</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Check out my digital projects, including data visualizations and usability reports as well as some more fun projects like Dungeons & Dragons resources!</p>
           <p><a class="btn btn-secondary" href="projects.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Connect</h2>
-          <p>Connect with me through social media or email.</p>
+          <p>Connect with me through social media or email. </p>
           <p>
             <a href="https://twitter.com/TheOtherAlexa"><img src="assets/images/Twitter.png" alt="logo" style="height:60px;width:60px;"></a>
             <a href="https://github.com/lyrox"><img src="assets/images/Github.png" alt="logo" style="height:60px;width:60px;" hspace="15"></a>
