--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Alexa J. Williams 2017 | Made with Bootstrap</p>
+        <p>&copy; Alexa J. Williams 2017 | Made with Bootstrap javascript library</p>
       </footer>
     </div> <!-- /container -->
 
