--- a/projects.html
+++ b/projects.html
@@ -104,9 +104,9 @@
               <li>A live version of this database is currently unavailable, but the files are available upon request.</li>
               </ul>
               <h3>Table Top RPG Library</h3>
-              Table top RPGs (Dungeons & Dragons, FATE, etc.) are a hobby of mine. I love creating stories, situations, and mechanics meant to be experienced through table top roleplaying. Though most
+              <p>Table top RPGs (Dungeons & Dragons, FATE, etc.) are a hobby of mine. I love creating stories, situations, and mechanics meant to be experienced through table top roleplaying. Though most
               of my work exists in pencil on paper in my notebooks, but I am trying to transfer some of my content online. You can find it all at
-              <a href="http://www.ajrpglibrary.wordpress.com">AJ's RPG Library</a>!
+              <a href="http://www.ajrpglibrary.wordpress.com">AJ's RPG Library</a>!</p>
             </p>
           </p>
       </div>
