--- a/resume.html
+++ b/resume.html
@@ -79,6 +79,9 @@
       <div class="container">
         <h1 class="display-3">Resume</h1>
         <p>
+          A list of references can be found <a href="assets/references.pdf">here</a>. 
+        </p>
+          <p>
             <h3>Library Experience</h3>
             <p>
               <strong>EMMANUEL COLLEGE | Boston, MA</strong></br>
@@ -86,10 +89,11 @@
               <ul>
               <li>Help students find and cite resources for research papers and other projects.</li>
               <li>Create and maintain Library Resource Guides using SubjectsPlus.</li>
-              <li>Assist in Instructional Librarian to create and run Information Literacy classes.</li>
+              <li>Assist Instructional Librarian in running Information Literacy classes.</li>
+              <li>Most recently created materials for reference staff training on new chat reference service.</li>
               </ul>
               <strong>SIMMONS COLLEGE | Boston, MA</strong></br>
-              2015-Present | Lead Technology Reference Assistant</br>
+              2015-2018 | Lead Technology Reference Assistant</br>
               <ul>
               <li>Oversee day to day running of the SLIS Tech Lab.</li>
               <li>Run technology workshops for Library and Information Science students.</li>
@@ -98,12 +102,29 @@
               <strong>DENNIS PUBLIC LIBRARY | Dennisport, MA</strong></br>
               2014-2015 | Circulation/Young Adult Collection Development</br>
               <ul>
-              <li>Use Sierra to maintain patron records, check in and out books.</li>
-              <li>Select and order books for the Young Adult section through Baker & Taylor.</li>
-              <li>Help to train and supervise volunteers.</li>
+                <li>Use Sierra to maintain patron records, check in and out books.</li>
+                <li>Select and order books for the Young Adult section through Baker & Taylor.</li>
+                <li>Help to train and supervise volunteers.</li>
               </ul>
             </p>
-            <h3>General Experience</h3>
+            <p>
+              <h3>General Experience</h3>
+              <strong>WELLESLEY COLLEGE | Wellesley, MA</strong></br>
+              2012-2014 | Desktop Support Specialist</br>
+              <ul>
+                <li>Staffed the Clapp Library's Technology Helpdesk, provided software and
+                    hardware support to students, faculty and staff.</li>
+                <li>Meet one-on-one with faculty to troubleshoot office desktop computer issues.</li>
+              </ul>
+              <strong>HOLIDAY HILL INN AND SUITES | Dennisport, MA</strong></br>
+              2006-2015 | Everything</br>
+              <ul>
+                <li>Scopped ice cream, helped customers, counted and locked away
+                  ice cream stand money at the end of the night.</li>
+                <li>Cleaned rooms when short on maids.</li>
+                <li>Staffed front desk, checked guests in, moved cots around, sorted linens, made the morning coffee.</li>
+              </ul>
+            </p>
           </p>
       </div>
     </div>
