--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
       <div class="container">
         <h1 class="display-3">Resume</h1>
         <p>
-          A list of references can be found <a href="assets/references.pdf">here</a>. 
+          A list of references can be found <a href="assets/references.pdf">here</a>.
         </p>
           <p>
             <h3>Library Experience</h3>
@@ -123,6 +123,13 @@
                   ice cream stand money at the end of the night.</li>
                 <li>Cleaned rooms when short on maids.</li>
                 <li>Staffed front desk, checked guests in, moved cots around, sorted linens, made the morning coffee.</li>
+              </ul>
+              <strong>BARNES & NOBLE | Hyannis, MA</strong></br>
+              2011-2015 | Bookseller</br>
+              <ul>
+                <li>Connect customers to the books they need, conduct basic reader's advisory.</li>
+                <li>Check out customer purchases.</li>
+                <li>Regularly rotate magazines racks.</li>
               </ul>
             </p>
           </p>
